{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 21,
  "lineage": "3b41d96a-87fa-9576-7863-6457c8a1f246",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:002000431150:internet-gateway/igw-0b66e839c86d7042e",
            "id": "igw-0b66e839c86d7042e",
            "owner_id": "002000431150",
            "tags": {
              "Name": "devops-assignment-igw"
            },
            "vpc_id": "vpc-0d9b3b849a3a87d08"
          },
          "dependencies": [
            "aws_vpc.devops_assignment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-072e5bb6e21aa79b8",
            "owner_id": "002000431150",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b66e839c86d7042e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-assignment-4-private-route-table"
            },
            "vpc_id": "vpc-0d9b3b849a3a87d08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_vpc.devops_assignment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef96cde2e830b257",
            "route_table_id": "rtb-072e5bb6e21aa79b8",
            "subnet_id": "subnet-0d7f0480763f35e0d"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_vpc.devops_assignment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043ae8a056417f3f3",
            "route_table_id": "rtb-072e5bb6e21aa79b8",
            "subnet_id": "subnet-0cf65349acfa97f82"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_vpc.devops_assignment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:002000431150:security-group/sg-09a75685b2dc7193b",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a75685b2dc7193b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "002000431150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9b3b849a3a87d08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:002000431150:subnet/subnet-0d7f0480763f35e0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d7f0480763f35e0d",
            "map_public_ip_on_launch": false,
            "owner_id": "002000431150",
            "tags": {
              "Name": "cs423-devops-private-1"
            },
            "vpc_id": "vpc-0d9b3b849a3a87d08"
          },
          "dependencies": [
            "aws_vpc.devops_assignment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:002000431150:subnet/subnet-0cf65349acfa97f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0cf65349acfa97f82",
            "map_public_ip_on_launch": false,
            "owner_id": "002000431150",
            "tags": {
              "Name": "cs423-devops-private-2"
            },
            "vpc_id": "vpc-0d9b3b849a3a87d08"
          },
          "dependencies": [
            "aws_vpc.devops_assignment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:002000431150:subnet/subnet-0aec6393337d419af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aec6393337d419af",
            "map_public_ip_on_launch": true,
            "owner_id": "002000431150",
            "tags": {
              "Name": "cs423-devopspublic-1"
            },
            "vpc_id": "vpc-0d9b3b849a3a87d08"
          },
          "dependencies": [
            "aws_vpc.devops_assignment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:002000431150:subnet/subnet-09da3e51a86c0e3eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09da3e51a86c0e3eb",
            "map_public_ip_on_launch": true,
            "owner_id": "002000431150",
            "tags": {
              "Name": "cs423-devopspublic-2"
            },
            "vpc_id": "vpc-0d9b3b849a3a87d08"
          },
          "dependencies": [
            "aws_vpc.devops_assignment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_assignment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:002000431150:vpc/vpc-0d9b3b849a3a87d08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-087610650d6efb2ec",
            "default_route_table_id": "rtb-032de3445e1259727",
            "default_security_group_id": "sg-084537e9b536dcdaa",
            "dhcp_options_id": "dopt-0bcbb79f8a93505b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d9b3b849a3a87d08",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-032de3445e1259727",
            "owner_id": "002000431150",
            "tags": {
              "Name": "devops-assignment-4"
            }
          }
        }
      ]
    }
  ]
}